Routing funcionando, con verificación de usuario logueado

--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,9 @@
 	                    <li><a href="#">Games</a></li>
 	                    <li><a href="#">Videos</a></li>
 	                    <li><a href="#">Others</a></li>
-	                    <li role="presentation" class="dropdown pull-right">
+	                    <li id="login-menu" role="presentation" class="dropdown pull-right">
 	                		<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">
-	                			<span>Carlos</span>
+	                			<span id="login-fullname">Carlos</span>
 	                			<img alt="Carlos Profile" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-16.png"><span class="caret"></span>
 	                		</a>
 	                		<ul class="dropdown-menu" role="menu">
