--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
         <!-- build:js scripts/vendor/modernizr.js -->
@@ -27,17 +28,6 @@
 	                    <li><a href="#">Games</a></li>
 	                    <li><a href="#">Videos</a></li>
 	                    <li><a href="#">Others</a></li>
-	                    <li id="login-menu" role="presentation" class="dropdown pull-right">
-	                		<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">
-	                			<span id="login-fullname">Carlos</span>
-	                			<img alt="Carlos Profile" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-16.png"><span class="caret"></span>
-	                		</a>
-	                		<ul class="dropdown-menu" role="menu">
-	                			<li><a href="#">Profile</a></li>
-	                			<li class="divider"></li>
-	                			<li><a href="#">Logout</a></li>
-	                		</ul>
-	                	</li>
 	                </ul>
                 </nav>
                 <h1>Comics Store</h1>
