--- a/app/index.html
+++ b/app/index.html
@@ -24,14 +24,24 @@
             <header class="header navbar">
             	<nav class="clearfix" role="navigation">
 	                <ul id="top-menu" class="nav nav-pills">
-	                    <li class="active-red"><a href="#">Comics</a></li>
-	                    <li><a href="#">Games</a></li>
-	                    <li><a href="#">Videos</a></li>
-	                    <li><a href="#">Others</a></li>
+	                    
 	                </ul>
                 </nav>
                 <h1>Comics Store</h1>
             </header>
+            <div class="row">
+			    <nav id="comic-menu" class="navbar navbar-inverse" role="navigation">
+			    	<ul class="nav navbar-nav">
+			            <li class="active"><a href="#">Home</a></li>
+			            <li id="genre-menu" class="dropdown">
+			            	<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Genres<span class="caret"></span></a>
+			            </li>
+			            <li><a href="#">Editions</a></li>
+			            <li><a href="#">New</a></li>
+			            <li><a href="#!/characters">Characters</a></li>
+			        </ul>
+			    </nav>
+			</div>
             <div class="general-view">
 	            
             </div>
