--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,8 @@
 			            <li id="genre-menu" class="dropdown">
 			            	<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Genres<span class="caret"></span></a>
 			            </li>
-			            <li><a href="#">Editions</a></li>
-			            <li><a href="#">New</a></li>
+			            <!--<li><a href="#">Editions</a></li>-->
+			            <!--<li><a href="#">News</a></li>-->
 			            <li><a href="#!/characters">Characters</a></li>
 			        </ul>
 			    </nav>
@@ -46,7 +46,19 @@
 	            
             </div>
             <div class="footer">
-                <p>♥ from the Yeoman team</p>
+                <ul class="pull-left list-inline footer-menu">
+					<li><a href="">Comic Store</a></li>
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Privacy & Terms</a></li>
+				</ul>
+				<div class="pull-right footer-social">
+					<ul class="list-inline center-block">
+				        <li><a href="#"><img src="http://www.bootply.com/assets/example/soc_fb.png"></a></li>
+				        <li><a href="#"><img src="http://www.bootply.com/assets/example/soc_tw.png"></a></li>
+				        <li><a href="#"><img src="http://www.bootply.com/assets/example/soc_gplus.png"></a></li>
+				        <li><a href="#"><img src="http://www.bootply.com/assets/example/soc_pin.png"></a></li>
+				      </ul>
+				</div>
             </div>
 
         </div>
