Se agregan ediciones y nuevos

--- a/app/index.html
+++ b/app/index.html
@@ -30,16 +30,8 @@
                 <h1>Comics Store</h1>
             </header>
             <div class="row">
-			    <nav id="comic-menu" class="navbar navbar-inverse" role="navigation">
-			    	<ul class="nav navbar-nav">
-			            <li class="active"><a href="#">Home</a></li>
-			            <li id="genre-menu" class="dropdown">
-			            	<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Genres<span class="caret"></span></a>
-			            </li>
-			            <!--<li><a href="#">Editions</a></li>-->
-			            <!--<li><a href="#">News</a></li>-->
-			            <li><a href="#!/characters">Characters</a></li>
-			        </ul>
+			    <nav id="main-menu" class="navbar navbar-inverse" role="navigation">
+			    	
 			    </nav>
 			</div>
             <div class="general-view">
